[package]
name = "adguardian"
version = "1.6.3"
edition = "2021"
authors = ["Alicia Sykes"]
description = "Terminal-based, real-time traffic monitoring and statistics for your AdGuard Home instance "
repository = "https://github.com/Lissy93/AdGuardian-Term"
license = "MIT"
readme = ".github/README.md"
keywords = ["adguard", "monitoring", "statistics"]
categories = ["command-line-utilities"]

[dependencies]
# Error objecr for idiomatic error handling
anyhow = "1.0"
# For encoding auth headers
base64 = "0.22"
# Date + time parsing + manipulating
chrono = "0.4"
# Handling of terminal colors
colored = "3"
# Term manipulation for kb + mouse events
crossterm = { version = "0.22.0", features = ["serde", "event-stream"] }
# Extension of futures for async computation
futures = "0.3"
# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
# Decerilization of responses
serde = { version = "1.0", features = ["derive"] }
# Decerilization of JSON responses
serde_json = "1.0"
# Read and calculate semantic version numbers
semver = "1.0"
# Date + time manipulation
tokio = { version = "1", features = ["full"] }
# Terminal UI library
tui = { package = "ratatui", version = "0.20.1" }
